--- a/resources/langs/en.json
+++ b/resources/langs/en.json
@@ -5,5 +5,48 @@
     "maincurs":"Course CB",
     "secondcurs":"Buy",
     "thirdcurs":"Sell",
-    "more":"View more"
+    "more":"View more",
+    "courses":"Courses",
+    "excahnge":"Exchange",
+    "settings":"Settings",
+    "exchangepg":"Exchange Page",
+    "lng":"Language",
+    "chfont":"Change Font",
+    "chmode":"Change Mode",
+    "settingspg":"Settings page",
+    "uz":"Uzbek",
+    "ru":"Russian",
+    "en":"English",
+    "lt":"Like a telephone",
+    "lm":"Light mode",
+    "dm":"Dark mode",
+    "exchinput":"Input your price in {}",
+    "snapshotempty":"No data available yet!",
+        "AED": "UAE Dirham",
+        "AUD": "Australian Dollar",
+        "CAD": "Canadian Dollar",
+        "CHF": "Swiss Franc",
+        "CNY": "Chinese Yuan",
+        "DKK": "Danish Krone",
+        "EGP": "Egyptian Pound",
+        "EUR": "Euro",
+        "GBP": "British Pound Sterling",
+        "ISK": "Icelandic Króna",
+        "JPY": "Japanese Yen",
+        "KRW": "South Korean Won",
+        "KWD": "Kuwaiti Dinar",
+        "KZT": "Kazakhstani Tenge",
+        "LBP": "Lebanese Pound",
+        "MYR": "Malaysian Ringgit",
+        "NOK": "Norwegian Krone",
+        "PLN": "Polish Zloty",
+        "RUB": "Russian Ruble",
+        "SEK": "Swedish Krona",
+        "SGD": "Singapore Dollar",
+        "TRY": "Turkish Lira",
+        "UAH": "Ukrainian Hryvnia",
+        "USD": "US Dollar"
+      
+      
+    
 }
