--- a/resources/langs/uz.json
+++ b/resources/langs/uz.json
@@ -1,3 +1,51 @@
 {
-    "mainappbar":"Valyutalar kursi"
+    "mainappbar":"Valyutalar kursi",
+    "inputappbar":"Valyutalar kirg`izing",
+    "appbarcancel":"Bekor Qilish",
+    "maincurs":"MB kursi",
+    "secondcurs":"Sotib olish",
+    "thirdcurs":"Sotib yuborish",
+    "more":"View more",
+    "courses":"Kurslar",
+    "excahnge":"Almashtrish",
+    "settings":"Sozlamalar",
+    "exchangepg":"Almashtrish oynasi",
+    "lng":"Tillar",
+    "chfont":"Fontlarni Almashtrish",
+    "chmode":"Holatlarni Almashtrish",
+    "settingspg":"Sozlamalar oynasi",
+    "uz":"O`zbekcha",
+    "ru":"Ruscha",
+    "en":"inglizcha",
+    "lt":"Sozlamalardaqa",
+    "lm":"Har doim yoruq",
+    "dm":"Har doim qorong`u",
+    "exchinput":"O`z summanginzni kirg`izng {}",
+    "snapshotempty":"Ma`lumotlar hozircha yoq!",
+        "AED": "BAA Dirham",
+        "AUD": "Avstraliya dollari",
+        "CAD": "Kanada dollari",
+        "CHF": "Shveytsariya franki",
+        "CNY": "Xitoy yuani",
+        "DKK": "Daniya kronasi",
+        "EGP": "Misr funti",
+        "EUR": "Yevro",
+        "GBP": "Angliya funt sterlingi",
+        "ISK": "Islandiya kronasi",
+        "JPY": "Yaponiya iyenasi",
+        "KRW": "Koreya respublikasi voni",
+        "KWD": "Quvayt dinori",
+        "KZT": "Qozog`iston tengesi",
+        "LBP": "Livan funti",
+        "MYR": "Malayziya ringgiti",
+        "NOK": "Norvegiya kronasi",
+        "PLN": "Polsha zlotiysi",
+        "RUB": "Rossiya rubli",
+        "SEK": "Shvetsiya kronasi",
+        "SGD": "Singapur dollari",
+        "TRY": "Turkiya lirasi",
+        "UAH": "Ukraina grivnasi",
+        "USD": "AQSh dollari"
+      
+      
 }
