--- a/resources/langs/ru.json
+++ b/resources/langs/ru.json
@@ -1,3 +1,51 @@
 {
-    "mainappbar":"Курс Валюты"
+    "mainappbar":"Курс Валюты",
+    "inputappbar":"Введите Валюту",
+    "appbarcancel":"Отменить",
+    "maincurs":"Курс ЦБ",
+    "secondcurs":"Купить",
+    "thirdcurs":"Продать",
+    "more":"View more",
+    "courses":"Курсы",
+    "excahnge":"Конвертация",
+    "settings":"Настройки",
+    "exchangepg":"Настройки",
+    "lng":"Языки",
+    "chfont":"Помеять шрифт",
+    "chmode":"Помеять режим",
+    "settingspg":"Настройки",
+    "uz":"Узбекский",
+    "ru":"Русский",
+    "en":"Английский",
+    "lt":"Как в системе",
+    "lm":"Всегда светлая",
+    "dm":"Всегда темная",
+    "exchinput":"Введите цену {}",
+    "snapshotempty":"На данный момент нету информации !",
+        "AED": "ОАЭ Дирхам",
+        "AUD": "Австралийский доллар",
+        "CAD": "Канадский доллар",
+        "CHF": "Швейцарский франк",
+        "CNY": "Китайский юань",
+        "DKK": "Датская крона",
+        "EGP": "Египетский фунт",
+        "EUR": "Евро",
+        "GBP": "Фунт стерлингов",
+        "ISK": "Исландская крона",
+        "JPY": "Японская иена",
+        "KRW": "Южнокорейская вона",
+        "KWD": "Кувейтский динар",
+        "KZT": "Казахстанский тенге",
+        "LBP": "Ливанский фунт",
+        "MYR": "Малайзийский ринггит",
+        "NOK": "Норвежская крона",
+        "PLN": "Польский злотый",
+        "RUB": "Российский рубль",
+        "SEK": "Шведская крона",
+        "SGD": "Сингапурский доллар",
+        "TRY": "Турецкая лира",
+        "UAH": "Украинская гривна",
+        "USD": "Доллар США"
+      
+      
 }
