--- a/resources/langs/en.json
+++ b/resources/langs/en.json
@@ -20,7 +20,12 @@
     "lt":"Like a telephone",
     "lm":"Light mode",
     "dm":"Dark mode",
+    "edit":"Change app color",
+    "aapp":"About App",
+    "que":"questions and suggestions?",
     "exchinput":"Input your price in {}",
+    "made":"made by {}",
+    "about":"SumSwap is your go-to currency converter for Uzbek Sum. Make money transfers, day-to-day payments, and manage your finances with ease. SumSwap offers real-time exchange rates, a wide currency selection, and a user-friendly interface. Convert Uzbek Sum to various international currencies effortlessly. SumSwap is more than just a converter; it provides everything you need for seamless financial management. All of that is simple and convenient by default. Download SumSwap today and simplify your currency conversion needs.",
     "snapshotempty":"No data available yet!",
         "AED": "UAE Dirham",
         "AUD": "Australian Dollar",
