--- a/resources/langs/ru.json
+++ b/resources/langs/ru.json
@@ -21,6 +21,11 @@
     "lm":"Всегда светлая",
     "dm":"Всегда темная",
     "exchinput":"Введите цену {}",
+    "edit":"Помеять цвет приложения",
+    "aapp":"О приложение",
+    "que":"вопросы и предложения",
+    "made":"Разработан {}",
+    "about":"SumSwap - ваш надежный конвертер валют для узбекского сума. Совершайте денежные переводы, ежедневные платежи и управляйте своими финансами с легкостью. SumSwap предлагает актуальные курсы обмена валют, широкий выбор валют и удобный интерфейс. Конвертируйте узбекский сум в различные международные валюты без усилий. SumSwap - это больше, чем просто конвертер; он предоставляет все необходимое для беспроблемного управления финансами. Все это просто и удобно по умолчанию. Скачайте SumSwap сегодня и упростите ваши валютные операции.",
     "snapshotempty":"На данный момент нету информации !",
         "AED": "ОАЭ Дирхам",
         "AUD": "Австралийский доллар",
