--- a/resources/langs/uz.json
+++ b/resources/langs/uz.json
@@ -16,12 +16,17 @@
     "settingspg":"Sozlamalar oynasi",
     "uz":"O`zbekcha",
     "ru":"Ruscha",
-    "en":"inglizcha",
+    "en":"Inglizcha",
     "lt":"Sozlamalardaqa",
     "lm":"Har doim yoruq",
     "dm":"Har doim qorong`u",
+    "made":"{} tomonidan yaratilgan",
     "exchinput":"O`z summanginzni kirg`izng {}",
     "snapshotempty":"Ma`lumotlar hozircha yoq!",
+    "edit":"Ilova rangini almashtrish",
+    "about":"SumSwap - O'zbekiston so'mi uchun ishonchli valyuta konverteringiz. Pul o'tkazmalari qiling, kundalik to'lovlarni amalga oshiring va moliyangizni osonlik bilan boshqaring. SumSwap haqiqiy vaqt rejimidagi valyuta kurslarini, keng valyuta tanlovini va foydalanuvchilarga qulay interfeysni taklif etadi. O'zbekiston so'mini turli xalqaro valutalarga osonlik bilan almashtiring. SumSwap - bu shunchaki konverter emas; u moliyaviy boshqaruv uchun zarur bo'lgan hamma narsani taqdim etadi. Bularning hammasi oddiy va qulay. SumSwap-ni bugun yuklab oling va valyuta konvertatsiyasini soddalashtiring.",
+    "aapp":"Ilova haqida",
+    "que":"Savol va takliflar",
         "AED": "BAA Dirham",
         "AUD": "Avstraliya dollari",
         "CAD": "Kanada dollari",
